# xsct_cmake

./: CMakeLists.txt  armr5_toolchain.cmake  create_project.tcl
.metadata/.plugins/org.eclipse.cdt.core/: app_hello.1598163267025.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: app_hello.sc
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/app_hello/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/bsp/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/bsp/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/hw/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
app_hello/: .cproject  .project
app_hello/src/: freertos_hello_world.c  lscript.ld
bsp/: .cproject  .project  system.mss
bsp/psu_cortexr5_0/include/: FreeRTOSConfig.h  xparameters.h
bsp/psu_cortexr5_0/libsrc/iicps_v3_9/src/: xiicps_g.c
bsp/psu_cortexr5_0/libsrc/ipipsu_v2_5/src/: xipipsu_g.c
bsp/psu_cortexr5_0/libsrc/scugic_v4_0/src/: xscugic_g.c
bsp/psu_cortexr5_0/libsrc/sdps_v3_7/src/: xsdps_g.c
bsp/psu_cortexr5_0/libsrc/spips_v3_2/src/: xspips_g.c
bsp/psu_cortexr5_0/libsrc/uartps_v3_7/src/: xuartps_g.c
bsp/psu_cortexr5_0/libsrc/usbpsu_v1_5/src/: xusbpsu_g.c
bsp/psu_cortexr5_0/libsrc/wdtps_v3_1/src/: xwdtps_g.c
hw/: .project  system.hdf
